       Randolph Chung <randolph@tausq.org>

     - debian/make-cvs-patch.sh: New file.

     - debian/patches/template.dpatch: Update headers to new format.

     - debian/patches/hurd-ioperms.dpatch - Deleted
     - debian/patches/hurd-lfs64.dpatch - Deleted
     - debian/patches/hurd-update.dpatch - Deleted
     - debian/patches/syserrlist.dpatch - Deleted

     - debian/README - More updates

  * GOTO Masanori <gotom@debian.or.jp>
     - debian/packages.d/glibc-doc.mk: change texi2html processed file from
       chapters.texi to libc.texinfo. Closes: #159417

     - Updating 2.2.9x fixes LSB 1.2 compliance. Closes: #156821

     - debian/control: add Depends: libdb1-compat.
       Until woody, libdb1 is included in libc6 package. However after sarge,
       libdb1 support is removed. libdb1-compat contains libdb1 which is
       formerly provided by libc6. Now libc6 depends on libdb1-compat,
       so upgrading from woody to sarge does not break any libdb1 issues.
       Closes: #155904

     - debian/patches/glibc22-hppa-fcntl.dpatch: added, patched by
       Carlos O'Donell <carlos@baldric.uwo.ca>.

  * Ben Collins <bcollins@debian.org>
    - Make sparc64 build use gcc-3.2.
    - Update all config options to not use --disable-sanity-checks, since we
      are actually using gcc-3.2 for everything.
    - Patch cleanups.
    - Re-enable optimized libs. Includes a simple mechanism which should fix
      the conflicting symbols during libc/libc-opt upgrade scenarios. This
      means that libc6-v9, libc6-i586 and libc6-i686 are back in full swing.
    - Remove all references to /usr/doc symlink crap, which is deprecated.

  * XXX Below here was during the 2.2.92 development, and never released.

  * Jeff Bailey <jbailey@nisa.net>
     - Upgrade tarballs to 2.2.92
     - version: Update to 2.2.92
     - debian/control.in/main: Require gcc-3.2 for all archs
     - debian/patches/0list: prune glibc-cvs, glibc22-s390-resource,