@@ -25,6 +25,13 @@ glibc (2.2.93-1) unstable; urgency=low
 
      - debian/README - More updates
 
+     - debian/rules.d/control.mk: debian/control should Depend on
+       debian/sysdeps/depflags.pl
+
+     - debian/sysdeps/depflags.pl: Actually add the dependancy on
+       libdb1-compat.  This is an update to GOTO Masanori's change,
+       Thanks to Ryan Murray for catching this.
+
   * GOTO Masanori <gotom@debian.or.jp>
      - debian/packages.d/glibc-doc.mk: change texi2html processed file from
        chapters.texi to libc.texinfo. Closes: #159417
